--- a/index.html
+++ b/index.html
@@ -1116,18 +1116,18 @@
 
                     // عرض المربعات
                     let statsHtml = `
-                        <div style='background:#fff;border-radius:12px;box-shadow:0 2px 8px #e0e0e0;padding:18px 24px;min-width:180px;min-height:90px;display:flex;flex-direction:column;align-items:center;justify-content:center;'>
+                        <!-- <div style='background:#fff;border-radius:12px;box-shadow:0 2px 8px #e0e0e0;padding:18px 24px;min-width:180px;min-height:90px;display:flex;flex-direction:column;align-items:center;justify-content:center;'>
                             <div style='font-size:1.2rem;color:#784fe7;font-weight:bold;'>منتجات Man</div>
                             <div style='font-size:2.1rem;font-weight:bold;color:#232323;'>${manCount}</div>
-                        </div>
-                        <div style='background:#fff;border-radius:12px;box-shadow:0 2px 8px #e0e0e0;padding:18px 24px;min-width:180px;min-height:90px;display:flex;flex-direction:column;align-items:center;justify-content:center;'>
+                        </div> -->
+                        <!-- <div style='background:#fff;border-radius:12px;box-shadow:0 2px 8px #e0e0e0;padding:18px 24px;min-width:180px;min-height:90px;display:flex;flex-direction:column;align-items:center;justify-content:center;'>
                             <div style='font-size:1.2rem;color:#784fe7;font-weight:bold;'>منتجات Woman</div>
                             <div style='font-size:2.1rem;font-weight:bold;color:#232323;'>${womanCount}</div>
-                        </div>
-                        <div style='background:#fff;border-radius:12px;box-shadow:0 2px 8px #e0e0e0;padding:18px 24px;min-width:180px;min-height:90px;display:flex;flex-direction:column;align-items:center;justify-content:center;'>
+                        </div> -->
+                        <!-- <div style='background:#fff;border-radius:12px;box-shadow:0 2px 8px #e0e0e0;padding:18px 24px;min-width:180px;min-height:90px;display:flex;flex-direction:column;align-items:center;justify-content:center;'>
                             <div style='font-size:1.2rem;color:#784fe7;font-weight:bold;'>إجمالي المنتجات</div>
                             <div style='font-size:2.1rem;font-weight:bold;color:#232323;'>${totalProducts}</div>
-                        </div>
+                        </div> -->
                         <div style='background:#fff;border-radius:12px;box-shadow:0 2px 8px #e0e0e0;padding:18px 24px;min-width:180px;min-height:90px;display:flex;flex-direction:column;align-items:center;justify-content:center;'>
                             <div style='font-size:1.2rem;color:#25d366;font-weight:bold;'>عدد أكواد الخصم</div>
                             <div style='font-size:2.1rem;font-weight:bold;color:#25d366;'>${discountCodesCount}</div>
