--- a/index.html
+++ b/index.html
@@ -639,9 +639,9 @@
     <div id="headerBar" style="position:sticky;top:0;z-index:10000;background:#fff;box-shadow:0 2px 8px #e0e0e0;">
         <div style="display:flex;flex-direction:column;align-items:stretch;">
             <!-- شريط ماركي متحرك أعلى اللوجو -->
-            <div id="promoBar" style="width:100%;background:#784fe7;color:#fff;font-size:1.5rem;font-weight:bold;letter-spacing:2px;position:relative;overflow:hidden;height:34px;display:flex;align-items:center;justify-content:center;">
+            <div id="promoBar" style="width:100%;background:#bfa14a;color:#fff;font-size:1.5rem;font-weight:bold;letter-spacing:2px;position:relative;overflow:hidden;height:34px;display:flex;align-items:center;justify-content:center;">
                 <div style="white-space:nowrap;display:inline-block;animation:marquee 20s linear infinite;">
-                    اشتري  <b style="color: #8f0794;">بـ 1000 جنية </b>  واحصل علي  <b style="color: #8f0794;">هدية </b> مجانية !! &nbsp; • &nbsp; اشتري  <b style="color: #8f0794;">بـ 1000 جنية </b>واحصل علي  <b style="color: #8f0794;">هدية </b> مجانية !! &nbsp; • &nbsp; اشتري  <b style="color: #8f0794;">بـ 1000 جنية </b>واحصل علي  <b style="color: #8f0794;">هدية </b> مجانية !! &nbsp; • &nbsp; اشتري  <b style="color: #8f0794;">بـ 1000 جنية </b>واحصل علي  <b style="color: #8f0794;">هدية </b> مجانية !!
+                    اشتري  <b style="color: #8f0794;"> بـ 1000 جنية </b>  واحصل علي  <b style="color: #8f0794;"> هدية </b> مجانية !! &nbsp; • &nbsp; اشتري  <b style="color: #8f0794;"> بـ 1000 جنية </b>واحصل علي  <b style="color: #8f0794;"> هدية </b> مجانية !! &nbsp; • &nbsp; اشتري  <b style="color: #8f0794;"> بـ 1000 جنية </b>واحصل علي  <b style="color: #8f0794;"> هدية </b> مجانية !! &nbsp; • &nbsp; اشتري  <b style="color: #8f0794;"> بـ 1000 جنية </b>واحصل علي  <b style="color: #8f0794;"> هدية </b> مجانية !!
                 </div>
             </div>
        
